# agency-core

./: .env.example  AUTH_IMPLEMENTATION.md  CHANGELOG.md  COMMIT_CONVENTION.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_COMPLETE.md  INSTALL.md  README.md  SUPPORT.md  agencyos.db  config.example.json  config.json  create_initial_user.py  example_characters.py  generate_key.py  init_database.sql  init_database2.sql  main.py  pyproject.toml  requirements.txt  run_tests.py  test_auth.py  test_embedding_model.py  test_server.py  verify_env.py
.github/: CODEOWNERS
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_COMPLETE.md  INSTALL.md  KEY_SECURITY_GUIDE.md  PYPI_DEPLOYMENT_GUIDE.md  README.md  SECURITY.md  Who am I ?.md  api-reference.md  architecture.md  global-model-ecology.md  index.md  project-summary.md
docs/tutorials/: README.md
examples/basic/: README.md
src/: __init__.py  version.py
src/core/: __init__.py  character.py  config.py  core_config.py  dify_config.py  intent_engine.py  llm_config.py  mail_config.py  mysql_wrapper.py  openclaw_config.py  orchestrator.py  runtime.py  security_config.py
src/core/auth/: mail_service.py  user_manager.py
src/core/database/: database_config.py  models.py
src/devices/: __init__.py  base.py  connection.py  device_config.py  discovery.py  registry.py
src/devices/examples/: smart_light.py
src/skills/: __init__.py  base.py  device_controller.py  query_handler.py  registry.py
src/utils/: logger.py
src/web/: __init__.py  api.py
tests/: install_deps.py  simple_test_character_system.py  simple_test_web_api.py  test.py  test_auth_debug.py  test_basic.py  test_character_system.py  test_connection.py  test_devices.py  test_ecosystem_integration.py  test_version_endpoint.py  test_web_api.py  websocket_server.py
