# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agencyos"
version = "1.0.0"
description = "AgencyOS - 面向物理世界的自主智能体操作系统"
authors = [
{name = "AgencyOS Contributors", email = "contact@agencyos.cn"}
]
license = {text = "Apache-2.0"}
readme = "docs/README.md"
requires-python = ">=3.8"
dependencies = [
"aiohttp>=3.9.0",
"websockets>=12.0",
"pydantic>=2.0.0",
"PyMySQL>=1.0.2",
"pyjwt>=2.8.0",
"python-dotenv>=1.0.0",
"mysql-connector-python>=8.2.0",
]

[project.optional-dependencies]
dev = [
"pytest>=7.4.0",
"pytest-asyncio>=0.21.0",
"black",
"isort",
"flake8",
]
bluetooth = [
"bleak>=0.21.0",  # 蓝牙支持
]
mqtt = [
"paho-mqtt>=1.6.0",  # MQTT支持
]
test = [
"pytest>=7.4.0",
"pytest-asyncio>=0.21.0",
"coverage",
"aioresponses",
]

[project.urls]
Homepage = "https://github.com/agencyos-cn/agentic-core"
Documentation = "https://github.com/agencyos-cn/agentic-core"

[tool.pytest.ini_options]
asyncio_mode = "strict"
addopts = [
    "-ra",
    "--tb=short",
]
testpaths = ["tests"]